--- a/wSoftSGSST/Maestras/mstSGSST.Master
+++ b/wSoftSGSST/Maestras/mstSGSST.Master
@@ -8,7 +8,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head runat="server">
     <title>SG-SST</title>
-    <link href="App_Themes/SoftSGSST.css" rel="stylesheet" type="text/css" />
+    <link href="../App_Themes/SoftSGSST.css" rel="stylesheet" type="text/css" />
 
     <%--HOJAS DE ESTILO LIBRERIA DE MENSAJES--%>
     <link href="css/alertify.default.css" rel="stylesheet" />
@@ -24,12 +24,74 @@
 </head>
 <body>
     <form id="form1" runat="server">
-        <div>
-            <asp:ScriptManager ID="ScriptManager1" runat="server"></asp:ScriptManager>
-            <uc1:ctrLoading runat="server" ID="ctrLoading" />
-            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-            </asp:ContentPlaceHolder>
-        </div>
+        <asp:ScriptManager ID="ScriptManager1" runat="server"></asp:ScriptManager>
+        <uc1:ctrLoading runat="server" ID="ctrLoading" />
+        <table width="100%" cellpadding="0" cellspacing="0">
+            <tr>
+                <td align="center">
+                    <div id="HeaderPagPrincipal">
+                        <table width="100%" cellpadding="0" cellspacing="0">
+                            <tr>
+                                <td align="left">
+                                    <asp:Image ID="imApp" runat="server" ImageUrl="~/Images/Maestra/imApp.png" />
+                                </td>
+                                <td align="right">
+                                    <asp:Image ID="imLogoEmpresa" runat="server" ImageUrl="~/Images/Maestra/imLogoEmpresa.png" />
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                </td>
+            </tr>
+            <tr>
+                <td align="left">
+                    <table width="100%">
+                        <tr>
+                            <td align="left" width="150px">
+                                <div id="Menu">
+                                    prueba Menu
+                                </div>
+                            </td>
+                            <td align="left" width="700px" style="vertical-align:top; text-align:left;">
+                                <br />
+                                <table width="100%" cellpadding="0" cellspacing="0">
+                                    <tr>
+                                        <td align="left">
+                                            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+                                            </asp:ContentPlaceHolder>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
+                    </table>
+                </td>
+            </tr>
+            <tr>
+                <td align="left">
+                    <div style="position: fixed; bottom: 0px; width: 100%;">
+                        <div id="LoginFooter">
+                            <div align="center">
+                                <table align="center" cellpadding="0" cellspacing="0" style="vertical-align: central; padding-top: 15px;">
+                                    <tr>
+                                        <td align="center">Software Desarrollado por:
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td align="center">Fábrica de Soluciones Empresariales FASEM
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td align="center">Bogotá D.C.
+                                        </td>
+                                    </tr>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </td>
+            </tr>
+        </table>
     </form>
 </body>
 </html>
