--- a/wSoftSGSST/App_Themes/SoftSGSST.css
+++ b/wSoftSGSST/App_Themes/SoftSGSST.css
@@ -4,8 +4,8 @@
 
 /*FOOTER PAGINA LOGIN*/
  #LoginFooter {
-    width: 100%;
-    height: 90px;
+    width: 101%;
+    height: 100px;
     background-color: #003366;
     bottom: 0px;
     color:#FFFFFF;
@@ -48,3 +48,74 @@
         color:#555555!important;
     }
  
+     /*PAGINA MAESTRA*/
+#HeaderPagPrincipal {
+    width: 102%;
+    height: 100px;
+    background-color: #003366;
+    bottom: 0px;
+    color:#FFFFFF;
+    font-family:Calibri;
+    font-size:10pt;
+    font-weight:bold;
+    margin-left:-10px;
+    margin-right:-10px;
+    margin-top:-10px;
+}
+
+#Menu {
+    height:84vh;
+    background-color:#DCDCDC;
+    margin-left:-10px;
+    margin-top:-3px;
+    z-index:-2!important;
+}
+
+
+/*ESTILO LETRA GENERAL APLICATIVO*/
+form {
+    border-style: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 11pt;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    color: #626262;
+    text-decoration: none;
+}
+
+/*ESTILO CAJAS DE TEXTO Y LISTAS DESPLGABLES*/
+input[type="text"], input[type="password"], textarea {
+    font-size: 11pt;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #222222;
+    border: 1px solid #DDDDDD;
+    background-color: #DDDDDD;
+    text-decoration: none;
+    height: 20px;
+}
+
+/*ESTILO LISTAS DESPLGABLES*/
+select  {
+     font-size: 11pt;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #222222;
+    border: 1px solid #DDDDDD;
+    background-color: #DDDDDD;
+    text-decoration: none;
+    height: 25px;
+}
+
+/*BOTONES PROVISIONAL*/
+input[type="submit"], input[type="button"] {
+    padding: 5px 5px 5px 5px;
+    border-style: none;
+    border-width: 1px;
+    color: #FFF;
+    background-color: #003366;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 13px;
+    font-weight: bold;
+    margin-right: 0px;
+    height: 32px;
+}
