--- a/wSoftSGSST/App_Themes/SoftSGSST.css
+++ b/wSoftSGSST/App_Themes/SoftSGSST.css
@@ -141,3 +141,8 @@ input[type="submit"], input[type="button"] {
         opacity: 0.4;
         filter: alpha(opacity=40);
     }
+
+.lbValidacion {
+    color:red;
+    font-weight:bold;
+}
