--- a/wSoftSGSST/Maestras/mstSGSST.Master
+++ b/wSoftSGSST/Maestras/mstSGSST.Master
@@ -22,7 +22,7 @@
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
-<body>
+<body style="margin: 0px;">
     <form id="form1" runat="server">
         <asp:ScriptManager ID="ScriptManager1" runat="server"></asp:ScriptManager>
         <uc1:ctrLoading runat="server" ID="ctrLoading" />
@@ -34,7 +34,7 @@
                 <td align="center">
                     <table width="100%" cellpadding="0" cellspacing="0">
                         <tr>
-                            <td>
+                            <td style="background-color: #003366;">
                                 <div id="HeaderPagPrincipal">
                                     <table width="100%" cellpadding="0" cellspacing="0">
                                         <tr>
@@ -54,23 +54,20 @@
             </tr>
             <tr>
                 <td align="left">
-                    <table width="100%">
+                    <table width="100%" style="height: 84vh;">
                         <tr>
-                            <td align="left" width="150px">
-                                <div id="Menu">
-                                    prueba Menu
-                                </div>
+                            <td align="left" width="150px" class="contentMenu">prueba Menu
+                                
                             </td>
                             <td align="left" width="700px" style="vertical-align: top; text-align: left;">
                                 <br />
-                                <table width="100%" cellpadding="0" cellspacing="0">
-                                    <tr>
-                                        <td align="left">
-                                            <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-                                            </asp:ContentPlaceHolder>
-                                        </td>
-                                    </tr>
-                                </table>
+
+                                <div style="height: 490px; overflow: auto;">
+                                    <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+                                    </asp:ContentPlaceHolder>
+                                </div>
+
+
                             </td>
                         </tr>
                     </table>
@@ -102,5 +99,5 @@
             </tr>
         </table>
     </form>
-</body>
+</bod>
 </html>
