--- a/wSoftSGSST/Maestras/mstSGSST.Master
+++ b/wSoftSGSST/Maestras/mstSGSST.Master
@@ -56,7 +56,7 @@
                 <td align="left">
                     <table width="100%" style="height: 84vh;">
                         <tr>
-                            <td align="left" width="150px" class="contentMenu">prueba Menu
+                            <td align="left" width="150px" class="contentMenu">prueba Menu123
                                 
                             </td>
                             <td align="left" width="700px" style="vertical-align: top; text-align: left;">
