--- a/wSoftSGSST/App_Themes/SoftSGSST.css
+++ b/wSoftSGSST/App_Themes/SoftSGSST.css
@@ -111,7 +111,7 @@ form {
 }
 
 /*ESTILO CAJAS DE TEXTO Y LISTAS DESPLGABLES*/
-input[type="text"], input[type="password"], textarea {
+input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], textarea {
     font-size: 11pt;
     font-family: Arial, Helvetica, sans-serif;
     color: #222222;
@@ -131,7 +131,7 @@ select {
     background-color: #DDDDDD;
     text-decoration: none;
     height: 25px !important;
-    width: 405px;
+    width: 400px;
 }
 
 /*BOTONES PROVISIONAL*/
@@ -186,7 +186,7 @@ table {
     margin-left: 0px;
     padding-left: 0px;
     *border-spacing: 0px;
-    border-spacing: 0px 1px;
+    border-spacing: 0px 1px!important;
 }
 /*GRILLAS*/
 .gvSGSST {
