--- a/wSoftSGSST/Maestras/mstSGSST.Master
+++ b/wSoftSGSST/Maestras/mstSGSST.Master
@@ -18,12 +18,12 @@
     <%--JAVASCRIPT LIBRERIA DE MENSAJES--%>
     <script type="text/javascript" src="../js/alertify.js"></script>
     <script type="text/javascript" src="../js/jquery-1.8.3.min.js"></script>
-    <script src="../js/jquery-1.9.1.js"></script>
+    <script type="text/javascript" src="../js/jquery-1.9.1.js"></script>
 
     <%--MENU--%>
     <link href="../css/Menu/bootstrap-treeview.css" rel="stylesheet"/>
     <script type="text/javascript"  src="../js/Menu/bootstrap-treeview.js"></script>
-    <script src="../js/Menu/bootstrap.js"></script>
+    <script  type="text/javascript" src="../js/Menu/bootstrap.js"></script>
     <link href="../css/Menu/bootstrap.min.css" rel="stylesheet" />
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
@@ -113,5 +113,5 @@
             </tr>
         </table>
     </form>
-</bod>
+</body>
 </html>
