botones informacion adicional peligro

--- a/wSoftSGSST/App_Themes/SoftSGSST.css
+++ b/wSoftSGSST/App_Themes/SoftSGSST.css
@@ -284,3 +284,8 @@ table {
     border-color:#C3C3C3;
     padding:5px;
 }
+
+.pnlContentInfoGris {
+    background-color:#DDDDDD;
+    padding:5px;
+}
