--- a/wSoftSGSST/Maestras/mstSGSST.Master
+++ b/wSoftSGSST/Maestras/mstSGSST.Master
@@ -21,8 +21,8 @@
     <script src="../js/jquery-1.9.1.js"></script>
 
     <%--MENU--%>
-    <link href="../css/Menu/bootstrap-treeview.css" rel="stylesheet"/>
-    <script type="text/javascript"  src="../js/Menu/bootstrap-treeview.js"></script>
+    <link href="../css/Menu/bootstrap-treeview.css" rel="stylesheet" />
+    <script type="text/javascript" src="../js/Menu/bootstrap-treeview.js"></script>
     <script src="../js/Menu/bootstrap.js"></script>
     <link href="../css/Menu/bootstrap.min.css" rel="stylesheet" />
     <asp:ContentPlaceHolder ID="head" runat="server">
@@ -41,7 +41,7 @@
         <%--<div align="right" style="position:absolute; padding-right:-10px; padding-top:90px;float:right">
             <asp:ImageButton ID="ibtnPanelGestion" runat="server"  CausesValidation="false" ImageUrl="~/Images/Botones/ibtnPnlGestion.png"/>
         </div>--%>
-        <table width="100%" cellpadding="0" cellspacing="0" style="border-spacing:0px 0px!important;">
+        <table width="100%" cellpadding="0" cellspacing="0" style="border-spacing: 0px 0px!important;">
             <tr>
                 <td align="center">
                     <table width="100%" cellpadding="0" cellspacing="0">
@@ -70,18 +70,15 @@
                         <tr>
                             <td align="left" width="150px" class="contentMenu">
                                 <div id="tree">
-
                                 </div>
                             </td>
                             <td align="left" width="700px" style="vertical-align: top; text-align: left;">
                                 <br />
 
-                                <div style="height: 490px; overflow: auto;">
-                                    <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-                                    </asp:ContentPlaceHolder>
+                                <div style="height: 490px; overflow: scroll;">
+                                     <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
+                                     </asp:ContentPlaceHolder>
                                 </div>
-
-
                             </td>
                         </tr>
                     </table>
@@ -113,5 +110,5 @@
             </tr>
         </table>
     </form>
-</bod>
+</body>
 </html>
