--- a/wSoftSGSST/App_Themes/SoftSGSST.css
+++ b/wSoftSGSST/App_Themes/SoftSGSST.css
@@ -1,11 +1,19 @@
 ﻿body {
+    border-style: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    color: #626262;
+    text-decoration: none;
 }
 /*PAGINA LOGIN*/
 
 /*FOOTER PAGINA LOGIN*/
 #LoginFooter {
     width: 101%;
-    height: 100px;
+    height: 90px;
     background-color: #003366;
     bottom: 0px;
     color: #FFFFFF;
@@ -102,7 +110,7 @@
 form {
     border-style: none;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 11pt;
+    font-size: 12px;
     font-style: normal;
     font-weight: normal;
     font-variant: normal;
@@ -112,17 +120,18 @@ form {
 
 /*ESTILO CAJAS DE TEXTO Y LISTAS DESPLGABLES*/
 input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], textarea {
-    font-size: 11pt;
+    font-size: 12px;
     font-family: Arial, Helvetica, sans-serif;
     color: #222222;
     border: 1px solid #DDDDDD;
     background-color: #DDDDDD;
     text-decoration: none;
+    width: 300px;
     }
 
 /*ESTILO LISTAS DESPLGABLES*/
 select {
-    font-size: 11pt;
+    font-size: 12px;
     font-family: Arial, Helvetica, sans-serif;
     color: #222222;
     border: 1px solid #DDDDDD;
@@ -140,7 +149,7 @@ input[type="submit"], input[type="button"] {
     color: #FFF;
     background-color: #003366;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 13px;
+    font-size: 12px;
     font-weight: bold;
     margin-right: 0px;
     height: 32px;
@@ -148,7 +157,7 @@ input[type="submit"], input[type="button"] {
 
 /*FORMULARIO*/
 .tdLabel {
-    width: 200px;
+    width:200px;
 }
 
 .tituloForm {
@@ -248,6 +257,16 @@ table {
             border-left: none;
             border-right: none;
             background: #DDDDDD;
+            height:50px;
+        }
+
+
+         .gvSGSST_Tr_Alternate {
+            border-bottom: none;
+            border-top: none;
+            border-left: none;
+            border-right: none;
+            background: #DDDDDD!important;
         }
 
 
@@ -257,4 +276,24 @@ table {
         border-left: none;
         border-right: none;
         padding-right:20px;
+        height:50px;
+        padding-left:5px;
     }
+
+.pathMenu {
+    color:#0034D8!important;
+    margin-left:10px;
+    font-weight:bold;
+}
+
+.pnlContentGv {
+    border-style:solid;
+    border-width:1px;
+    border-color:#C3C3C3;
+    padding:5px;
+}
+
+.pnlContentInfoGris {
+    background-color:#DDDDDD;
+    padding:5px;
+}
