--- a/wSoftSGSST/Maestras/mstSGSST.Master
+++ b/wSoftSGSST/Maestras/mstSGSST.Master
@@ -21,9 +21,9 @@
     <script type="text/javascript" src="../js/jquery-1.9.1.js"></script>
 
     <%--MENU--%>
-    <link href="../css/Menu/bootstrap-treeview.css" rel="stylesheet"/>
-    <script type="text/javascript"  src="../js/Menu/bootstrap-treeview.js"></script>
-    <script  type="text/javascript" src="../js/Menu/bootstrap.js"></script>
+    <link href="../css/Menu/bootstrap-treeview.css" rel="stylesheet" />
+    <script type="text/javascript" src="../js/Menu/bootstrap-treeview.js"></script>
+    <script type="text/javascript" src="../js/Menu/bootstrap.js"></script>
     <link href="../css/Menu/bootstrap.min.css" rel="stylesheet" />
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
@@ -41,7 +41,7 @@
         <%--<div align="right" style="position:absolute; padding-right:-10px; padding-top:90px;float:right">
             <asp:ImageButton ID="ibtnPanelGestion" runat="server"  CausesValidation="false" ImageUrl="~/Images/Botones/ibtnPnlGestion.png"/>
         </div>--%>
-        <table width="100%" cellpadding="0" cellspacing="0" style="border-spacing:0px 0px!important;">
+        <table width="100%" cellpadding="0" cellspacing="0" style="border-spacing: 0px 0px!important;">
             <tr>
                 <td align="center">
                     <table width="100%" cellpadding="0" cellspacing="0">
@@ -66,45 +66,29 @@
             </tr>
             <tr>
                 <td align="left">
-                    <table width="100%" style="height: 84vh;">
+                    <div style="position: fixed; bottom: 0px; width: 100%; z-index: -1;">
+
+                        <div id="LoginFooter">
+                        </div>
+                    </div>
+                    <div style="position: fixed; bottom: 0px; margin-bottom: -2px; margin-left: -8px;">
+                      <%--  <img src="../Images/Login/imFooterFasem.png" />--%>
+                        <img src='<%= ResolveUrl("~/Images/Login/imFooterFasem.png") %>' />
+                    </div>
+                    <table width="100%" style="height: 82vh;">
                         <tr>
                             <td align="left" width="150px" class="contentMenu">
                                 <div id="tree">
-
                                 </div>
                             </td>
                             <td align="left" width="700px" style="vertical-align: top; text-align: left;">
-                                <div style="height: 500px; overflow: auto;">
+                                <div style="height: 555px; overflow: auto;">
                                     <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
                                     </asp:ContentPlaceHolder>
                                 </div>
                             </td>
                         </tr>
                     </table>
-                </td>
-            </tr>
-            <tr>
-                <td align="left">
-                    <div style="position: fixed; bottom: 0px; width: 100%;">
-                        <div id="LoginFooter">
-                            <div align="center">
-                                <table align="center" cellpadding="0" cellspacing="0" style="vertical-align: central; padding-top: 15px;">
-                                    <tr>
-                                        <td align="center">Software Desarrollado por:
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td align="center">Fábrica de Soluciones Empresariales FASEM
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td align="center">Bogotá D.C.
-                                        </td>
-                                    </tr>
-                                </table>
-                            </div>
-                        </div>
-                    </div>
                 </td>
             </tr>
         </table>
