--- a/wSoftSGSST/Maestras/mstSGSST.Master
+++ b/wSoftSGSST/Maestras/mstSGSST.Master
@@ -66,12 +66,12 @@
             </tr>
             <tr>
                 <td align="left">
-                    <div style="position: fixed; bottom: 0px; width: 100%; z-index: -1;">
+                    <%--<div style="position: fixed; bottom: 0px; width: 100%; z-index: -1;">
 
                         <div id="LoginFooter">
                         </div>
-                    </div>
-                    <div style="position: fixed; bottom: 0px; margin-bottom: -2px; margin-left: -8px;">
+                    </div>--%>
+                    <div style="position: fixed; bottom: 0px; margin-bottom: 0px; margin-left: -8px;">
                       <%--  <img src="../Images/Login/imFooterFasem.png" />--%>
                         <img src='<%= ResolveUrl("~/Images/Login/imFooterFasem.png") %>' />
                     </div>
